--- a/.htaccess
+++ b/.htaccess
@@ -1,16 +1,24 @@
-# To prevent access to .env and other files
+# Redirect all traffic to the 'public' directory, but keep the URL as api.penpyramid.com
+RewriteEngine On
+RewriteCond %{REQUEST_URI} !^/public/
+RewriteRule ^(.*)$ public/$1 [L]
+
+# Prevent access to .env and other hidden files
 <Files .*>
-# Apache 2.2
-<IfModule !mod_authz_core.c>
-Order deny,allow
-Deny from all
-</IfModule>
-# Apache 2.4
-<IfModule mod_authz_core.c>
-Require all denied
-</IfModule>
+    # For Apache 2.2
+    <IfModule !mod_authz_core.c>
+        Order deny,allow
+        Deny from all
+    </IfModule>
+
+    # For Apache 2.4
+    <IfModule mod_authz_core.c>
+        Require all denied
+    </IfModule>
 </Files>
 
-<IfModule mod_alias.c>
-RedirectMatch 301 ^/laravelpro/$ https://penpyramid.com/laravelpro/public
+# Force HTTPS (optional, if SSL is enabled)
+<IfModule mod_rewrite.c>
+    RewriteCond %{HTTPS} off
+    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 </IfModule>
