--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-APP_NAME=Laravel
+APP_NAME=PenPyramid
 APP_ENV=local
-APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
+SANCTUM_STATEFUL_DOMAINS=localhost:3000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -19,18 +20,18 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=Affan-MacBook-Pro.local
+DB_PORT=5432
+DB_DATABASE=penpyramid
+DB_USERNAME=postgres
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DOMAIN=.localhost:3000
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
