Add laravel pulse, create api for profile

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,12 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+PULSE_DB_CONNECTION=pulse
+PULSE_DB_HOST=localhost
+PULSE_DB_PORT=3306
+PULSE_DB_DATABASE=db_pulse_pyramid
+PULSE_DB_USERNAME=root
+PULSE_DB_PASSWORD=
+PULSE_DB_COLLATION=utf8mb4_general_ci
+
