Change in authentication for SSO

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
 APP_NAME=PenPyramid
 APP_ENV=local
+APP_KEY=base64:Ymo4ZTF6Y254ZWZhdGV6azJjc25keXRpcm9raXppams=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
+#APP_URL=http://api.penpyramid.af
 APP_URL=http://localhost:8000
-FRONTEND_URL=http://localhost:3000
-SANCTUM_STATEFUL_DOMAINS=localhost:3000
+FRONTEND_URL=http://app.penpyramid.af,http://api.penpyramid.af:8090,http://localhost:3000
+#SANCTUM_STATEFUL_DOMAINS=app.penpyramid.af
+
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,17 +24,17 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=Affan-MacBook-Pro.local
+DB_HOST=localhost
 DB_PORT=5432
 DB_DATABASE=penpyramid
 DB_USERNAME=postgres
-DB_PASSWORD=
+DB_PASSWORD=password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=.localhost:3000
+#SESSION_DOMAIN=.penpyramid.af
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
@@ -47,14 +50,23 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
+#MAIL_MAILER=log
+#MAIL_HOST=127.0.0.1
+#MAIL_PORT=2525
+#MAIL_USERNAME=null
+#MAIL_PASSWORD=null
+# Looking to send emails in production? Check out our Email API/SMTP product!
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_USERNAME=256b83b3eeb00e
+MAIL_PASSWORD=76de45112348c0
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="hello@penpyramid.local"
 MAIL_FROM_NAME="${APP_NAME}"
+
+
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -64,11 +76,11 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
+
 PULSE_DB_CONNECTION=pulse
 PULSE_DB_HOST=localhost
 PULSE_DB_PORT=3306
 PULSE_DB_DATABASE=db_pulse_pyramid
 PULSE_DB_USERNAME=root
-PULSE_DB_PASSWORD=
+PULSE_DB_PASSWORD=password
 PULSE_DB_COLLATION=utf8mb4_general_ci
-
